syntax = "proto3";

option csharp_namespace = "Chat.Client";

package greet;

service Messenger {
  rpc Join (JoinRegister) returns (JoinRegister);
  rpc SendMessage (stream Message) returns (stream Message);
  rpc Disconnect(DisconnectRegister) returns (DisconnectRegister);
}

message JoinRegister{
	string name = 1;	
}

message Message{
	string name = 1;
	string content = 2;
	bool is_join = 3;
	bool is_disconnect = 4;
}

message DisconnectRegister{
	string name = 1;
}